--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
-        <variable name="pageBean" type="io.github.oniatsu.fragmentstack.sample.beans.PageBean"/>
+
+        <variable
+            name="pageBean"
+            type="io.github.oniatsu.fragmentstack.sample.beans.PageBean" />
     </data>
+
     <FrameLayout
         android:id="@+id/main_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
             <!--<android.support.v7.widget.Toolbar-->
             <!--android:id="@+id/toolbar"-->
             <!--android:layout_height="wrap_content"-->
@@ -22,19 +25,17 @@
             <!--android:minHeight="?attr/actionBarSize"-->
             <!--android:background="?attr/colorPrimary">-->
             <!--</android.support.v7.widget.Toolbar>-->
-            <android.support.design.widget.TabLayout
+            <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabGravity="fill"
-                />
-            <android.support.v4.view.ViewPager
+                app:tabGravity="fill" />
+
+            <androidx.viewpager.widget.ViewPager
                 android:id="@+id/tab_view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                >
-            </android.support.v4.view.ViewPager>
+                android:layout_weight="1" />
         </LinearLayout>
     </FrameLayout>
 </layout>
